# nono

./: CHANGELOG.md  Cargo.toml  Cross.toml  Makefile  README.md  SECURITY.md  cliff.toml
.github/ISSUE_TEMPLATE/: onboarding_issue.yml
.github/workflows/: attest-release.yml  aur-publish.yml  ci.yml  docs-dispatch.yml  homebrew-bump.yml  homebrew-tap-publish.yml  image-build.yml  release.yml  sign-instruction-files.yml
bindings/c/: Cargo.toml
bindings/c/src/: lib.rs
crates/nono/: Cargo.toml
crates/nono-cli/: Cargo.toml  README.md
crates/nono-cli/data/: network-policy.json  nono-profile.schema.json  profile-authoring-guide.md
crates/nono-cli/src/: app_runtime.rs  approval_runtime.rs  audit_commands.rs  audit_event_reader.rs  audit_integrity.rs  audit_ledger.rs  capability_ext.rs  cli.rs  cli_bootstrap.rs  command_blocking_deprecation.rs  command_display.rs  command_policy.rs  command_runtime.rs  completions.rs  credential_runtime.rs  deprecated_schema.rs  deprecation_warnings.rs  exec_strategy.rs  execution_runtime.rs  hook_runtime.rs  launch_runtime.rs  learn.rs  macos_trust.rs  main.rs  migration.rs  network_policy.rs  output.rs  pack_update_hint.rs  package.rs  package_cmd.rs  package_status.rs  policy.rs  profile_cmd.rs  profile_runtime.rs  profile_save_runtime.rs  protected_paths.rs  proxy_runtime.rs  pty_proxy.rs  pull_ui.rs  query_ext.rs  (+19 more)
crates/nono-cli/src/config/: user.rs
crates/nono-cli/src/exec_strategy/: supervisor_linux.rs
crates/nono-cli/src/profile/: builtin.rs  mod.rs
crates/nono-cli/src/tool-sandbox/: audit_context.rs  credentials.rs  dynamic_providers.rs  env.rs  launch.rs  mod.rs  policy.rs  protocol.rs  token_broker.rs  url_shim.rs
crates/nono-cli/src/tool-sandbox/platform/: linux.rs  macos.rs
crates/nono-cli/tests/: alias_inventory.rs  deny_overlap_run.rs  deprecated_schema.rs  lint_docs.rs  lint_scripts_negative_paths.rs  manifest_roundtrip.rs  profile_cli.rs  profile_cmd.rs  schema_shape.rs
crates/nono-cli/tests/fixtures/legacy_profiles/: canonical_equivalent_of_all_keys.json  legacy_all_keys.json  legacy_collision_security_and_groups.json  legacy_policy_add_allow_read.json  legacy_policy_add_allow_readwrite.json  legacy_policy_add_allow_write.json  legacy_policy_add_deny_access.json  legacy_policy_add_deny_commands.json  legacy_policy_exclude_groups.json  legacy_policy_override_deny.json  legacy_security_allowed_commands.json  legacy_security_groups.json
crates/nono-proxy/: Cargo.toml
crates/nono-proxy/src/: approval.rs  audit.rs  capture.rs  config.rs  credential.rs  forward.rs  lib.rs  reverse.rs  route.rs  server.rs  token.rs
crates/nono-proxy/src/tls_intercept/: bundle.rs  ca.rs  cert_cache.rs  handle.rs  mod.rs
crates/nono/schema/: capability-manifest.schema.json
crates/nono/src/: audit.rs  capability.rs  diagnostic.rs  keystore.rs  lib.rs  scrub.rs
crates/nono/src/sandbox/: linux.rs  mod.rs
crates/nono/src/supervisor/: mod.rs  types.rs
crates/nono/src/undo/: types.rs
docker/: Dockerfile  Dockerfile-CI  Dockerfile-musl  Dockerfile-musl-cross  Dockerfile.chainguard
docs/: docs.json
docs/cli/clients/: claude-code.mdx  codex.mdx  opencode.mdx  quickstart.mdx
docs/cli/development/: index.mdx
docs/cli/features/: atomic-rollbacks.mdx  audit.mdx  credential-injection.mdx  dangerous-command-blocking.mdx  managing-packs.mdx  profile-authoring.mdx  profile-introspection.mdx  profiles-groups.mdx  session-lifecycle.mdx  supervisor.mdx  tool-sandbox.mdx  trust.mdx
docs/cli/getting_started/: installation.mdx  quickstart.mdx
docs/cli/internals/: containers.mdx  landlock.mdx  security-model.mdx  wsl2-feature-matrix.mdx
docs/cli/usage/: developer-workflows.mdx  examples.mdx  flags.mdx  troubleshooting.mdx
docs/plans/: 2026-04-24-issue-594-phase-2-schema-design.md  2026-04-24-issue-594-phase-2-schema-plan.md
packaging/aur/: PKGBUILD  README.md  update.sh
packaging/homebrew/: README.md  update.sh
packaging/rpm/: README.md  nono-cli.spec.in
scripts/: build-rpm.sh  build-srpm.sh  claude-clear-nono.sh  codex-clear-nono.sh  diagnose-macos-browser-open.sh  lint-docs.sh  probe-claude-open-path.sh  push-downstream-workflows.sh  test-linux-container.sh  test-linux.sh  test-list-aliases.sh  wsl-dev.sh  wsl-test-distro.sh
scripts/downstream-workflows/: bump-nono-go.yml  bump-nono-py.yml  bump-nono-registry.yml  bump-nono-ts.yml
tests/: run_integration_tests.sh
tests/integration/: test_audit.sh  test_bypass_protection.sh  test_child_tool_boundaries.sh  test_learn.sh  test_network.sh  test_pack_resolution.sh  test_rollback.sh  test_wsl2.sh
tools/docker/: linux-dev.Dockerfile
